css/main.css
/* ... */
.contact-us__link:hover {
  box-shadow: 0 0 50px rgba(5,10,6,.25);
  background: #19331c
}
.contact-us__link:hover .contact-us__link-icon {
  -webkit-transform: scale(1.06);
  transform: scale(1.06)
}
.contact-us__form {
  position: absolute;
  right: 0;
  left: auto;
  bottom: 0;
  width: calc(95vw - 60px);
  max-width: 600px;
  z-index: 22;
  color: #fff;
  transition: .35s ease;
  opacity: 0;
  -webkit-transform: translateX(100%);
  transform: translateX(100%);
  pointer-events: none
}
.contact-us__form.is-active {
  opacity: 1;
  -webkit-transform: translateX(0);
  transform: translateX(0);
  pointer-events: auto
}
.contact-us__form-inner {
  max-height: 95vh;
  overflow: auto;
  background: #3ab14a;
  border-radius: 50px 0 0 0;
  padding: 40px 20px 6.3vw
}
.contact-us__form-close {
  position: absolute;
  right: 100%;
  left: auto;
  bottom: 0;
  width: 100px;
  height: 172px;
  border-radius: 100px 0 0 100px;
  background: #000;
  color: #fff;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: -1;
  cursor: pointer;
  transition: box-shadow .5s ease
}
.contact-us__form-close .icon {
  fill: #fff
}
.contact-us__form-close:hover {
  box-shadow: 0 0 50px rgba(5,10,6,.25)
}
.contact-us__form-close:hover .contact-us__link-icon {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg)
}
.contact-us__form .input {
  height: 44px
}
.contact-us__form textarea.input {
  height: 144px
}
.contact-us__form-caption {
  font-size: 24px;
  margin-bottom: 4px
}
@media (min-width:320px) {
  .contact-us__form-caption {
    font-size: calc(.03125 * 100vw + 14px)
  }
}
@media (min-width:1600px) {
  .contact-us__form-caption {
    font-size: 64px
  }
}
.contact-us__form-notice {
  font-size: 18px;
  margin-bottom: 20px
}
@media (min-width:320px) {
  .contact-us__form-notice {
    font-size: calc(.0046875 * 100vw + 16.5px)
  }
}
@media (min-width:1600px) {
  .contact-us__form-notice {
    font-size: 24px
  }
}
.contact-us__form .btn--submit {
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 16px;
  margin-left: auto;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex
}
@media (max-width:47.99em) {
  .contact-us__link {
    width: 60px;
    height: 30px;
    border-radius: 12px 0 0 12px;
    gap: 4px
  }
  .contact-us__link-text {
    font-size: 10px;
    text-align: center;
    line-height: 11px
  }
  .contact-us__form .btn--submit {
    padding: 10px
  }
  .contact-us__form .btn--submit .icon {
    height: auto
  }
  .contact-us__form .input {
    padding: 10px
  }
  .contact-us__form .input::-webkit-input-placeholder {
    font-size: 14px
  }
  .contact-us__form .input::-moz-placeholder {
    font-size: 14px
  }
  .contact-us__form .input:-ms-input-placeholder {
    font-size: 14px
  }
  .contact-us__form .input::placeholder {
    font-size: 14px
  }
  .contact-us__form-row {
    margin-bottom: 10px
  }
  .contact-us__form-close {
    width: 60px;
    height: 100px
  }
}
@media (min-width:48em) {
  .contact-us__form-inner {
    padding-left: 16.7%;
    padding-right: 20%;
    padding-top: 5.5vw;
    border-radius: 6.3vw 0 0 0
  }
  .contact-us__form-notice {
    margin-bottom: 43px
  }
  .contact-us__form-row {
    margin-bottom: 32px
  }
  .contact-us__form .input {
    font-size: 14px;
    padding-left: 20px;
    padding-right: 20px;
    height: 54px
  }
}
@media (min-width:48em) and (min-width:768px) {
  .contact-us__form .input {
    font-size: calc(.0024038462 * 100vw + 12.1538461538px)
  }
}
@media (min-width:48em) and (min-width:1600px) {
  .contact-us__form .input {
    font-size: 16px
  }
}
@media (min-width:48em) {
  .contact-us__form .btn--submit {
    height: 63px;
    padding-right: 28px;
    margin-top: 40px
  }
}
@media (min-width:48em) {
  .contact-us__link {
    width: 80px; 
    height: 40px;
    border-radius: 12px 0 0 12px
  }
  .contact-us__link-text {
    display: block;
    font-size: 11px;
    text-align: center;
    line-height: 13px
  }
}
@media (min-width:64em) {
  .contact-us__form .btn--submit {
    font-size: 16px
  }
}
.about {
  padding-top: 1vw;
  padding-bottom: 2vw
}
.about__description {
  font-size: 18px;
  color: #434643
}
@media (min-width:320px) {
  .about__description {
    font-size: calc(.0089485459 * 100vw + 15.1364653244px)
  }
}
@media (min-width:767px) {
  .about__description {
    font-size: 22px
  }
}
.about__container {
  position: relative
}
@media (max-width:47.99em) {
  .about__arrows {
    position: absolute;
    right: 0;
    top: 0;
    width: 40vw;
    max-width: 500px;
    min-width: 320px;
    opacity: .5;
    z-index: -1
  }
  .about__arrows img {
    display: block;
    width: 100%
  }
}
@media (min-width:48em) {
  .about {
    padding-top: 1vw;
    padding-bottom: 2.7vw
  }
  .about__description {
    font-size: 22px;
    padding-right: 14.7vw;
    line-height: 140%
  }
}
@media (min-width:48em) and (min-width:320px) {
  .about__description {
    font-size: calc(.0223713647 * 100vw + 14.841163311px)
  }
}
@media (min-width:48em) and (min-width:767px) {
  .about__description {
    font-size: 32px
  }
}
@media (min-width:48em) {
  .about p {
    margin: 0 0 .6em
  }
}
@media (min-width:48em) {
  .about .h2 {
    margin-bottom: 2vw
  }
}
@media (min-width:48em) {
  .about__arrows {
    position: absolute;
    right: 0;
    top: 8.3vw;
    z-index: -1;
    opacity: .5;
    width: 43vw
  }
  .about__arrows img {
    display: block;
    width: 100%
  }
}
.clients {
  position: relative;
  background: #e0e5e4;
  padding-top: 10px
}
.clients__list {
  visibility: visible
}
.clients__list .splide__track {
  cursor: -webkit-grab;
  cursor: grab
}
.clients__list .splide__track[aria-live=polite] {
  cursor: -webkit-grabbing;
  cursor: grabbing
}
.clients__list .splide__track {
  padding-top: 60px;
  padding-bottom: 60px
}
/* ... */

